--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
+spring.datasource.Ordername=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
